Able to upload file
Able to upload file

--- a/SampleProjectForApi/SampleProjectForApi.csproj
+++ b/SampleProjectForApi/SampleProjectForApi.csproj
@@ -67,10 +67,15 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="YoutubeSearch.cs" />
+    <Compile Include="YoutubeUploadVideo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="client_secrets.json.json" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="1.mp4" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
