Moved youtube folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .vs/
 PublicRelations/Messenger/client_secrets.json.json
 SampleProjectForApi/client_secrets.json.json
+SampleProjectForApi/YoutubeSamples/client_secrets.json.json
