--- a/PublicRelations/PublicRelations.csproj
+++ b/PublicRelations/PublicRelations.csproj
@@ -90,6 +90,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocialMedia\Youtube\UploadVideo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SocialMedia\Youtube\UploadVideo.Designer.cs">
+      <DependentUpon>UploadVideo.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="PRMDI.resx">
       <DependentUpon>PRMDI.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +108,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SocialMedia\Youtube\UploadVideo.resx">
+      <DependentUpon>UploadVideo.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Messenger\client_secrets.json.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -119,7 +128,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Messenger\Social Media\" />
-    <Folder Include="SocialMedia\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="PRDatabase.mdf">
