--- a/PublicRelations/PublicRelations.csproj
+++ b/PublicRelations/PublicRelations.csproj
@@ -90,11 +90,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SocialMedia\Youtube\UploadVideo.cs">
+    <Compile Include="SocialMedia\Youtube\MyYoutubeUploaded.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SocialMedia\Youtube\UploadVideo.Designer.cs">
-      <DependentUpon>UploadVideo.cs</DependentUpon>
+    <Compile Include="SocialMedia\Youtube\MyYoutubeUploaded.Designer.cs">
+      <DependentUpon>MyYoutubeUploaded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SocialMedia\Youtube\MyYoutubeUploadVideo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SocialMedia\Youtube\MyYoutubeUploadVideo.Designer.cs">
+      <DependentUpon>MyYoutubeUploadVideo.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="PRMDI.resx">
       <DependentUpon>PRMDI.cs</DependentUpon>
@@ -108,8 +114,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SocialMedia\Youtube\UploadVideo.resx">
-      <DependentUpon>UploadVideo.cs</DependentUpon>
+    <EmbeddedResource Include="SocialMedia\Youtube\MyYoutubeUploaded.resx">
+      <DependentUpon>MyYoutubeUploaded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SocialMedia\Youtube\MyYoutubeUploadVideo.resx">
+      <DependentUpon>MyYoutubeUploadVideo.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Messenger\client_secrets.json.json" />
     <None Include="packages.config" />
