--- a/PublicRelations/PublicRelations.csproj
+++ b/PublicRelations/PublicRelations.csproj
@@ -90,6 +90,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocialMedia\Youtube\MyYoutubeSearch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SocialMedia\Youtube\MyYoutubeSearch.Designer.cs">
+      <DependentUpon>MyYoutubeSearch.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SocialMedia\Youtube\CreateMyYoutubePlayListcs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SocialMedia\Youtube\CreateMyYoutubePlayListcs.Designer.cs">
+      <DependentUpon>CreateMyYoutubePlayListcs.cs</DependentUpon>
+    </Compile>
     <Compile Include="SocialMedia\Youtube\MyYoutubeUploaded.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +126,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SocialMedia\Youtube\MyYoutubeSearch.resx">
+      <DependentUpon>MyYoutubeSearch.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SocialMedia\Youtube\CreateMyYoutubePlayListcs.resx">
+      <DependentUpon>CreateMyYoutubePlayListcs.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SocialMedia\Youtube\MyYoutubeUploaded.resx">
       <DependentUpon>MyYoutubeUploaded.cs</DependentUpon>
     </EmbeddedResource>
